position mobile fix

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ main {
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+    position: relative;
 }
 
 .main-img {
@@ -50,7 +51,7 @@ main {
     width: 100vw;
     height: 100vh;
     background-color: #44cff0;
-    transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, -2);
     -webkit-transform: translate3d(0, 0, -2);
 }
 .filter-bg {
